# vcf-info2format

./: Cargo.toml  README.md
examples/: input.vcf
src/: main.rs
