[package]
name = "vcf-info2format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
rust-htslib = { version = "0.40.2", default-features = false }
log = "*"
env_logger = "*"
